--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,8 @@
   --color-yellow: #FFD700;     
   --color-green: #32CD32;      
   --color-white: #F5F5F5;      
-  --color-red: #FF4500;        
+  --color-red: #FF4500;   
+  --color-purple: #6f42c1;     
   
   
   --color-background: var(--color-white);
@@ -41,32 +42,47 @@ body{
 
 
 .header{
-  padding: 2.3rem 5rem
+  padding: 2rem 3rem;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
 }
 
 
 .header__logo .header__title {
-  font-size: 4.5em;
+  font-size: 4em;
   color: var(--color-blue);
-
-  text-shadow: 2px 2px 5px var(--color-blue);
+  background: linear-gradient(90deg, #007BFF, var(--color-green));
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 
-.header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+
 
 .navbar{
-
   background-color: transparent;
-  padding: 1rem 3rem;
+  padding: 0 40px;
+  height: 50px;
   border-radius: 10px;
   border: 2px solid rgba(50, 205, 50,.8);
   transition: .3s ease;
+  box-shadow: inset 2px 4px 6px white;
 
+}
+
+.navbar .nav__links{
+  display: flex;
+  height: 100%;
+  gap: 40px;
+}
+
+.nav__links li{
+  height: 100%;
+}
+
+.navbar .nav__dropdown-menu{
+  display: none;
 }
 
 .navbar a{
@@ -74,6 +90,9 @@ body{
   font-family: 'Raleway';
   font-size: 1em;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  height: 100%;
   position: relative;
   transition: .3s ease;
 }
@@ -81,7 +100,7 @@ body{
 .navbar a::after{
   content: '';
   position: absolute;
-  bottom: -5px;
+  bottom: 10px;
   left: 0;
   background-color: white;
   height: 2px;
@@ -94,59 +113,39 @@ body{
 }
 
 
+.nav__register{
+  justify-self: end;
+  display: flex;
+  gap: 20px;
+}
 
-.navbar .nav__links{
+
+
+.nav__register .btn {
+  font-family: 'Raleway';
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 40px;
-}
-
-.navbar .nav__dropdown-menu{
-  display: none;
-}
-
-.nav__login{
-  background-color: transparent;
-  border: 2px solid rgba(50, 205, 50,.8);
-  padding: .8rem 3rem;
+  padding: 10px 2.5rem;
   border-radius: 5px;
-  box-shadow: 3px 3px 1px black;
-  transition: .2s ease;
-  
-
-}
-
-.nav__login .btn__login{
-  color: var(--color-green);
-  font-family: 'Raleway';
   font-weight: bold;
   font-size: 1em;
   transition: .2s ease;
 }
 
-.nav__login:hover{
-  background-color: var(--color-yellow);
-  border: 2px solid var(--color-yellow);
-
-}
-
-.nav__login:hover .btn__login{
-  color: white;
-}
 
 .homepage{
   height: 100vh;
 }
 
 .homepage .homepage__hero{
-  padding: 10rem 0;
-  gap: 20px;
-  margin-left: 100px;
+  gap: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  height: 750px;
+  width: 100%;
 }
 
 .homepage .homepage__title{
@@ -183,5 +182,6 @@ body{
   background-color: var(--color-yellow);
   border-color: var(--color-yellow);
   color: white;
+  box-shadow: inset 2px 4px 6px white;
 }
 
