--- a/src/style.css
+++ b/src/style.css
@@ -121,16 +121,44 @@ body{
 
 
 
-.nav__register .btn {
+.nav__register .btn__1, .btn__2 {
   font-family: 'Raleway';
   display: flex;
   align-items: center;
+  gap: 10px;
   justify-content: center;
   padding: 10px 2.5rem;
   border-radius: 5px;
   font-weight: bold;
   font-size: 1em;
   transition: .2s ease;
+}
+
+
+
+
+.nav__register .btn__1{
+  background: linear-gradient(90deg,var(--color-blue),var(--color-purple));
+  filter: hue-rotate(80deg);
+  color: white;
+  transition: .2s ease;
+}
+
+
+.nav__register .btn__1:hover{
+  box-shadow: 0px 0px 10px var(--color-blue),
+              0px 0px 10px var(--color-purple)
+}
+
+.nav__register .btn__2{
+  background: linear-gradient(90deg,var(--color-blue),var(--color-green));
+  color: white;
+  transition: .2s ease;
+}
+
+.nav__register .btn__2:hover{
+  box-shadow: 0px 0px 10px var(--color-blue),
+              0px 0px 10px var(--color-green)
 }
 
 
@@ -176,6 +204,9 @@ body{
   margin-top: 20px;
   border: 2px solid var(--color-green);
   transition: .2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .homepage .homepage__button:hover{
@@ -183,5 +214,10 @@ body{
   border-color: var(--color-yellow);
   color: white;
   box-shadow: inset 2px 4px 6px white;
+}
+
+.homepage .homepage__button i{
+  font-size: 1.3em;
+  display: flex;
 }
 
