--- a/src/style.css
+++ b/src/style.css
@@ -178,13 +178,13 @@ body{
 
 
 
-.nav__register .btn__1, .btn__2 {
+.nav__register .btn__1{
   font-family: 'Raleway';
   display: flex;
   align-items: center;
   gap: 10px;
   justify-content: center;
-  padding: 10px 2.5rem;
+  padding: 12px 4em;
   border-radius: 5px;
   font-weight: bold;
   font-size: 1em;
@@ -198,25 +198,15 @@ body{
   background: linear-gradient(90deg,var(--color-blue),var(--color-purple));
   filter: hue-rotate(80deg);
   color: white;
-  transition: .2s ease;
+  transition: .5s ease;
 }
 
 
 .nav__register .btn__1:hover{
-  box-shadow: 0px 0px 30px var(--color-blue),
-              0px 1px 60px var(--color-purple)
+  background: linear-gradient(90deg, var(--color-blue), var(--color-green));
+  filter: hue-rotate(0deg);
 }
 
-.nav__register .btn__2{
-  background: linear-gradient(90deg,var(--color-blue),var(--color-green));
-  color: white;
-  transition: .2s ease;
-}
-
-.nav__register .btn__2:hover{
-  box-shadow: 0px 1px 30px var(--color-blue),
-              0px 1px 60px var(--color-green)
-}
 
 
 .homepage{
@@ -229,7 +219,7 @@ body{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 750px;
+  height: 700px;
   width: 100%;
 }
 
