--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,19 @@ body{
   transition: opacity .3s ease;
 }
 
+.nav__dropdown-menu .dropdown__link{
+  display: flex;
+  font-size: 1.1em;
+  gap: 5px;
+}
+
+
+.nav__dropdown-menu .dropdown__link img{
+  height: auto;
+  width: 25px;
+
+}
+
 .navbar .nav__dropdown:hover .nav__dropdown-menu{
   opacity: 1;
   pointer-events: initial;
@@ -118,6 +131,8 @@ body{
 #nav__dropdown__link{
   position: relative;
 }
+
+
 
 #nav__dropdown__link::after{
   content: '';
@@ -184,11 +199,10 @@ body{
   align-items: center;
   gap: 10px;
   justify-content: center;
-  padding: 12px 4em;
+  padding: 10px 4em;
   border-radius: 5px;
   font-weight: bold;
   font-size: 1em;
-  transition: .2s ease;
 }
 
 
@@ -198,13 +212,14 @@ body{
   background: linear-gradient(90deg,var(--color-blue),var(--color-purple));
   filter: hue-rotate(80deg);
   color: white;
-  transition: .5s ease;
+  transition: 1s ease, scale 0.5s ease;
 }
 
 
 .nav__register .btn__1:hover{
   background: linear-gradient(90deg, var(--color-blue), var(--color-green));
   filter: hue-rotate(0deg);
+  scale: 1.1
 }
 
 
