--- a/src/style.css
+++ b/src/style.css
@@ -105,7 +105,7 @@ body{
   top: 99%;
   z-index: 1;
   border: 2px solid var(--color-yellow);
-  padding:  1.5rem 2.5rem;
+  padding:  1.5rem 1rem;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   transition: opacity .3s ease;
@@ -113,7 +113,7 @@ body{
 
 .nav__dropdown-menu li{
   display: flex;
-  font-size: 1.2em;
+  font-size: 1.1em;
   gap: 3px;
 }
 
@@ -126,13 +126,31 @@ body{
 
 
 #programming__video__icon{
+  opacity: 0;
   height: auto;
   width: 50px;
+  transition: .2s ease;
 }
 #history__video__icon{
-  height: 50px;
+  opacity: 0;
+  height: 40px;
   width: 50px;
+  transition: .2s ease;
+
 }
+
+
+
+.nav__dropdown-menu .history:hover #history__video__icon{
+  opacity: 1;
+
+}
+
+.nav__dropdown-menu .programming:hover #history__video__icon{
+  opacity: 1;
+
+}
+
 
 .navbar .nav__dropdown:hover .nav__dropdown-menu{
   opacity: 1;
