--- a/src/style.css
+++ b/src/style.css
@@ -33,12 +33,14 @@
 
 
 body{
-  background: var(--color-white);
+    background: radial-gradient(
+    circle at center,
+    #ffffff 0%,
+    #f7fff9 100%   /* verde pastel apenas perceptible */
+  );
   position: relative;
   overflow-x: hidden;
 }
-
-
 
 
 
@@ -63,12 +65,13 @@ body{
 
 .navbar{
   background-color: var(--color-green);
-  padding: 0 60px;
   height: 50px;
+  padding: 0 60px;
   border: 2px solid var(--color-green);
   transition: .3s ease;
   border-radius: 10px;
   position: relative;
+  z-index: 1;
 
 }
 
@@ -103,7 +106,7 @@ body{
   top: 99%;
   z-index: 1;
   border: 2px solid var(--color-green);
-  padding:  1.5rem 2rem;
+  padding:  1.5rem 3.8rem;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   transition: opacity .5s ease;
@@ -128,18 +131,18 @@ body{
   background: rgba(255,255,255, 0);
   padding: 5px 10px;
   border-radius: 5px;
-  transition: .2s ease;
+  transition: .4s ease;
 }
 
 .nav__dropdown-menu li a:hover{
-  background: rgba(255,255,255, .1);
+  background: rgba(255,255,255, .3);
   -webkit-backdrop-filter: blur(10px);
 }
 
 
 .nav__dropdown-menu li img{
   height: auto;
-  width: 25px;
+  width: 30px;
   transition: .1s ease;
 
 }
@@ -157,8 +160,12 @@ body{
 }
 
 #nav__dropdown__link{
+  display: flex;
+  align-items: center;
   position: relative;
 }
+
+
 
 
 
@@ -170,7 +177,7 @@ body{
   height: 2px;
   background-color: white;
   width: 0%;
-  transition: .2s ease;
+  transition: .5s ease;
 }
 
 #nav__dropdown__link:hover#nav__dropdown__link::after{
@@ -195,7 +202,6 @@ body{
   align-items: center;
   height: 100%;
   position: relative;
-  transition: .3s ease;
 }
 
 .navbar #nav__link::after{
@@ -206,7 +212,7 @@ body{
   background-color: white;
   height: 2px;
   width: 0%;
-  transition: .2s ease;
+  transition: .5s ease;
 }
 
 .navbar #nav__link:hover::after{
@@ -230,24 +236,22 @@ body{
   padding: 10px 4em;
   border-radius: 5px;
   font-weight: bold;
-  font-size: 1em;
+  font-size: 1.1em;
 }
 
 
 
 
 .nav__register .btn__1{
-  background: linear-gradient(90deg,var(--color-blue),var(--color-purple));
-  filter: hue-rotate(80deg);
+  background-color: var(--color-blue);
   color: white;
-  transition: 1s ease, scale 0.5s ease;
+  transition: .3s ease;
 }
 
 
 .nav__register .btn__1:hover{
-  background: linear-gradient(90deg, var(--color-blue), var(--color-green));
-  filter: hue-rotate(0deg);
-  scale: 1.1
+  background: var(--color-grayBlack)
+
 }
 
 
@@ -257,7 +261,7 @@ body{
 }
 
 .homepage .homepage__hero{
-  gap: 25px;
+  gap: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -291,20 +295,21 @@ body{
   padding: 10px 45px;
   font-weight: bold;
   border-radius: 10px;
+  background-color: var(--color-green);
   margin-top: 20px;
+  color: var(--color-white);
   border: 2px solid var(--color-green);
-  transition: .2s ease;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: .3s ease;
 }
 
-.homepage .homepage__button:hover{
+.homepage__button:hover{
   background-color: var(--color-grayBlack);
-  border-color: var(--color-grayBlack);
-  color: white;
-  box-shadow: inset 2px 4px 6px white;
+  border: 2px solid var(--color-grayBlack);
 }
+
 
 .homepage .homepage__button i{
   font-size: 1.3em;
