--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
   --color-purple: #6f42c1; 
   
   
-  --color-background: var(--color-white);
+  --color-background: #eaf4f4;
   --color-primary: var(--color-blue);
   --color-button: var(--color-yellow);
   --color-success: var(--color-green);
@@ -33,13 +33,8 @@
 
 
 body{
-    background: radial-gradient(
-    circle at center,
-    #ffffff 0%,
-    #f7fff9 100%   /* verde pastel apenas perceptible */
-  );
-  position: relative;
-  overflow-x: hidden;
+    background-color: var(--color-background);
+    height: 100vh;
 }
 
 
@@ -47,8 +42,11 @@ body{
 .header{
   padding: 2rem 3rem;
   display: grid;
+  background-color: white;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
+  position: fixed;
+  width: 100%;
 }
 
 
@@ -64,160 +62,38 @@ body{
 
 
 .navbar{
-  background-color: var(--color-green);
-  height: 50px;
-  padding: 0 60px;
-  border: 2px solid var(--color-green);
-  transition: .3s ease;
-  border-radius: 10px;
-  position: relative;
-  z-index: 1;
 
+  height: 100%;
+  
 }
 
-.navbar .nav__links{
-  display: flex;
-  gap: 60px;
-  height: 100%;
-  width: 100%;
-}
-
-.nav__links li{
-  height: 100%;
+.navbar .nav__links, #nav__link{
   display: flex;
   align-items: center;
-  justify-content: center;
+  font-family: 'Raleway';
+  height: 100%;
+  font-size: 1em;
+  color: var(--color-grayBlack);
+  font-weight: bold;
 }
-
 
 
 
 .navbar .nav__dropdown-menu{
-  display: flex;
-  justify-content: left;
-  flex-direction: column;
-  gap: 30px;
-  pointer-events: none;
-  opacity: 0;
-  position: absolute;
-  background-color: var(--color-green);
-  width: calc(100% + 4px);
-  left: -2px;
-  top: 99%;
-  z-index: 1;
-  border: 2px solid var(--color-green);
-  padding:  1.5rem 3.8rem;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  transition: opacity .5s ease;
+  display: none;
 }
 
-.nav__dropdown:hover .nav__dropdown-menu{
-  opacity: 1;
-  pointer-events: initial;
-}
-
-
-
-
-.nav__dropdown-menu li{
-  display: flex;
-  font-size: 1.1em;
-  gap: 3px;
-  width: 10px;
-}
-
-.nav__dropdown-menu li a{
-  background: rgba(0,0,0, 0);
-  padding: 5px 10px;
-  border-radius: 5px;
-  transition: .4s ease;
-}
-
-.nav__dropdown-menu li a:hover{
-  background: rgba(0,0,0, .3);
-  -webkit-backdrop-filter: blur(10px);
-}
-
-
-.nav__dropdown-menu li img{
-  height: auto;
-  width: 30px;
-  transition: .1s ease;
-
-}
-
-
-.nav__dropdown li{
-  display: flex;
-  gap: 10px;
-}
-
-.nav__dropdown li img{
-  height: 30px;
-  width: 30px;
-  filter: invert(100%);
-}
-
-#nav__dropdown__link{
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-
-
-
-
-
-#nav__dropdown__link::after{
-  content: '';
-  position: absolute;
-  bottom: 10px;
-  left: 0px;
-  height: 2px;
-  background-color: white;
-  width: 0%;
-  transition: .5s ease;
-}
-
-#nav__dropdown__link:hover#nav__dropdown__link::after{
-  width: 100%;
-}
-
-
-.navbar .nav__dropdown-menu li{
-  justify-content: left;
-  padding: 0px;
-}
-.navbar .nav__dropdown-menu li a{
-  color: white;
-}
-
-.navbar a{
-  color: var(--color-white);
+.nav__dropdown #nav__dropdown__link{
+  font-size: 1em;
+  color: var(--color-grayBlack);
   font-family: 'Raleway';
-  font-size: 1.1em;
   font-weight: bold;
-  display: flex;
-  align-items: center;
-  height: 100%;
-  position: relative;
+
 }
 
-.navbar #nav__link::after{
-  content: '';
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  background-color: white;
-  height: 2px;
-  width: 0%;
-  transition: .5s ease;
-}
 
-.navbar #nav__link:hover::after{
-  width: 100%;
-}
+
+
 
 .nav__register{
   justify-self: end;
@@ -257,17 +133,23 @@ body{
 
 
 .homepage{
-  height: 100vh;
+  height: 100vh
 }
 
 .homepage .homepage__hero{
-  gap: 35px;
+  height: 550px;
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-direction: column;
-  height: 700px;
   width: 100%;
+}
+
+.homepage__hero__content{
+  display: flex;
+  margin-top: 50px;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+  align-items: center;
 }
 
 .homepage .homepage__title{
@@ -289,20 +171,26 @@ body{
 }
 
 .homepage .homepage__button{
-  font-size: 1.5em;
+  font-size: 1em;
   font-family: 'Raleway';
-  color: var(--color-green);
-  padding: 10px 45px;
+  color: var(--color-blue);
   font-weight: bold;
-  border-radius: 10px;
-  background-color: var(--color-green);
+  border-radius: 30px;
+  background-color: var(--color-blue);
   margin-top: 20px;
   color: var(--color-white);
-  border: 2px solid var(--color-green);
+  border: 2px solid var(--color-blue);
   display: flex;
   align-items: center;
   justify-content: center;
   transition: .5s ease;
+}
+
+.homepage .homepage__button a{
+  font-size: 1.2em;
+  padding: 8px 15px;
+  font-family: 'Raleway';
+  color: var(--color-white);
 }
 
 .homepage__button:hover{
@@ -310,15 +198,15 @@ body{
   border: 2px solid var(--color-grayBlack);
 }
 
-
-.homepage .homepage__button i{
-  font-size: 1.3em;
-  display: flex;
+.about__hero{
+  height: 100vh;
 }
+
+
 
 @media (max-width: 1750px) {
   .header{
-    padding: 1rem 2rem;
+    padding: .5em 2rem;
   }
 
   .header__logo .header__title{
@@ -334,7 +222,6 @@ body{
   }
 
   .homepage .homepage__hero{
-    height: 550px;
   }
 
   .homepage__hero .homepage__title{
@@ -346,8 +233,8 @@ body{
   }
 
   .homepage__hero .homepage__button{
-    padding: 7.5px 20px;
-  }
+    padding: 7.5px;
 
+  }
   
 }
