--- a/src/style.css
+++ b/src/style.css
@@ -269,12 +269,16 @@ body{
     font-size: 3rem;
   }
 
-  .navbar{
-    padding: 0 20px;
+  .navbar .nav__links, #nav__link{
+    gap: 20px;
   }
 
   .nav__links li{
     padding: 0 20px;
+  }
+
+  .homepage .homepage__hero{
+    height: 550px;
   }
 
 
@@ -287,7 +291,7 @@ body{
   }
 
   .homepage__hero .homepage__button{
-    padding: 7.5px;
+    padding: 15px 1.5rem
 
   }
   
