--- a/src/style.css
+++ b/src/style.css
@@ -94,6 +94,7 @@ body{
   border-radius: 5px;
   inset: -10px;
   z-index: -1;
+  transition: .3s ease;
 }
 
 #nav__link:hover::after{
@@ -105,42 +106,64 @@ body{
 .navbar .nav__dropdown-menu{
   display: flex;
   flex-direction: column;
+  opacity: 0;
   position: absolute;
   background-color: white;
   box-shadow: 0.25rem 1rem 0 #282e3e1a;
   border-radius: .5rem;
   top: 45px;
   left: 30px;
+  transition: .3s ease;
 }
 
 .navbar .nav__dropdown-menu li{
   padding: 1rem 1.25rem;
+  background-color: transparent;
+  transition: .3s ease;
 }
 
 .navbar .nav__dropdown-menu li:nth-child(1){
   background-color: transparent;
   border-top-left-radius: .5em;
   border-top-right-radius: .5em;
-  transition: .3s ease;
+  gap: 5px;
+  display: flex;
+  align-items: center;
 }
+
+.navbar .nav__dropdown-menu li:nth-child(1) img{
+  height: auto;
+  width: 30px;
+}
+
 
 .navbar .nav__dropdown-menu li:nth-child(1):hover{
-  background-color: wheat;
+  background-color: #282e3e1a;
 }
 
-.navbar .nav__dropdown-menu li{
-  background-color: wheat;
+.navbar .nav__dropdown-menu li:nth-child(2):hover{
+  background-color: #282e3e1a;
 }
+
+.navbar .nav__dropdown-menu li:nth-child(3):hover{
+  background-color: #282e3e1a;
+}
+
 
 .navbar .nav__dropdown-menu li:nth-child(4){
-  background-color: wheat;
+  background-color: transparent;
   border-bottom-left-radius: .5em;
   border-bottom-right-radius: .5em;
+}
+
+.navbar .nav__dropdown-menu li:nth-child(4):hover{
+  background-color: #282e3e1a;
 }
 
 .navbar .nav__dropdown-menu .dropdown__link{
   font-family: 'Raleway';
   color: var(--color-grayBlack);
+  font-size: 1.1em;
 }
 
 .nav__dropdown #nav__dropdown__link{
