--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
   --color-purple: #6f42c1; 
   
   
-  --color-background: #eaf4f4;
+  --color-background: white;
   --color-primary: var(--color-blue);
   --color-button: var(--color-yellow);
   --color-success: var(--color-green);
@@ -48,6 +48,7 @@ body{
   align-items: center;
   position: fixed;
   width: 100%;
+  border-bottom: 1px solid rgba(0,0,0,.2);
 }
 
 
@@ -75,7 +76,7 @@ body{
 .navbar .nav__links, #nav__link{
   display: flex;
   align-items: center;
-  gap: 60px;
+  gap: 70px;
   font-family: 'Raleway';
   height: 100%;
   font-size: 1em;
@@ -98,7 +99,7 @@ body{
 }
 
 #nav__link:hover::after{
-  background-color: rgba(0,0,0,.1)
+  background: rgba(0,0,0,.2)
 }
 
 
@@ -111,7 +112,7 @@ body{
   opacity: 0;
   position: absolute;
   background-color: white;
-  box-shadow: 0.25rem 1rem 0 #282e3e1a;
+  box-shadow: .40rem .50rem rgba(0,0,0,.6);
   border-radius: .5rem;
   top: 45px;
   left: 30px;
@@ -124,7 +125,7 @@ body{
   transition: .3s ease;
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
 
 }
 
@@ -144,17 +145,28 @@ body{
   width: 30px;
 }
 
+.navbar .nav__dropdown-menu li:nth-child(3) img{
+  height: auto;
+  width: 30px;
+}
+
+.navbar .nav__dropdown-menu li:nth-child(4) img{
+  height: auto;
+  width: 30px;
+}
+
+
 
 .navbar .nav__dropdown-menu li:nth-child(1):hover{
-  background-color: #282e3e1a;
+  background: rgba(0,0,0,.2);
 }
 
 .navbar .nav__dropdown-menu li:nth-child(2):hover{
-  background-color: #282e3e1a;
+  background-color: rgba(0,0,0,.2)
 }
 
 .navbar .nav__dropdown-menu li:nth-child(3):hover{
-  background-color: #282e3e1a;
+  background-color: rgba(0,0,0,.2)
 }
 
 
@@ -165,7 +177,7 @@ body{
 }
 
 .navbar .nav__dropdown-menu li:nth-child(4):hover{
-  background-color: #282e3e1a;
+  background-color: rgba(0,0,0,.2)
 }
 
 .navbar .nav__dropdown-menu .dropdown__link{
@@ -197,7 +209,7 @@ body{
 }
 
 #nav__dropdown__link:hover::after{
-  background-color: rgba(0,0,0,.1)
+  background-color: rgba(0,0,0,.2)
 }
 
 
@@ -207,7 +219,8 @@ body{
   display: flex;
   align-self: baseline;
   width: 15px;
-  rotate: -90deg;
+  rotate: 90deg;
+  transition: .3s ease;
 }
 
 
@@ -217,25 +230,45 @@ body{
 .nav__register{
   justify-self: end;
   display: flex;
-  gap: 20px;
+  gap: 1.5em;
 }
 
 
 
-.nav__register .btn__1{
+.nav__register .btn__register__login{
   font-family: 'Raleway';
   display: flex;
   align-items: center;
   gap: 10px;
   justify-content: center;
-  padding: 10px 4em;
+  padding: 10px 1.5em;
   border-radius: 4px;
   font-weight: bold;
-  font-size: 1.1em;
-  background: linear-gradient(90deg,var(--color-blue),var(--color-green));
+  font-size: 1em;
+  background: var(--color-blue);
   color: white;
   transition: .5s ease;
 }
+
+.nav__register .btn__register__signup{
+  font-family: 'Raleway';
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  padding: 10px 1.5em;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 1em;
+  background: var(--color-green);
+  color: white;
+  transition: .5s ease;
+}
+
+
+
+
+ 
 
 
 .homepage{
@@ -273,7 +306,7 @@ body{
 .homepage .homepage__subtitle{
   font-size: 1.7rem;
   font-family: 'Raleway';
-  color: #444;
+  color: var(--color-grayBlack);
 }
 
 .homepage .homepage__button{
@@ -299,6 +332,7 @@ body{
   font-family: 'Raleway';
   color: var(--color-white);
 }
+
 
 
 
