--- a/src/style.css
+++ b/src/style.css
@@ -112,7 +112,7 @@ body{
   opacity: 0;
   position: absolute;
   background-color: white;
-  box-shadow: .40rem .50rem rgba(0,0,0,.6);
+  box-shadow: .40rem .50rem rgba(0,0,0,.4);
   border-radius: .5rem;
   top: 45px;
   left: 30px;
@@ -247,7 +247,11 @@ body{
   font-size: 1em;
   background: var(--color-blue);
   color: white;
-  transition: .5s ease;
+  transition: .1s ease-in-out;
+}
+
+.nav__register .btn__register__login:hover{
+  transform: translateY(-3px)
 }
 
 .nav__register .btn__register__signup{
@@ -262,7 +266,11 @@ body{
   font-size: 1em;
   background: var(--color-green);
   color: white;
-  transition: .5s ease;
+  transition: .1s ease-in-out;
+}
+
+.nav__register .btn__register__signup:hover{
+  transform: translateY(-3px)
 }
 
 
@@ -336,8 +344,13 @@ body{
 
 
 
-.about__hero{
+.quiz__spotlight{
   height: 100vh;
+}
+
+.quiz__spotlight .quiz__spotlight__header{
+  font-size: 5rem;
+  text-align: center;
 }
 
 
