--- a/src/style.css
+++ b/src/style.css
@@ -104,20 +104,18 @@ body{
 
 
 
-
-
 .navbar .nav__dropdown-menu{
   display: flex;
   flex-direction: column;
   opacity: 0;
   position: absolute;
-  background-color: white;
-  box-shadow: .40rem .50rem rgba(0,0,0,.4);
+  background-color: var(--color-green);
   border-radius: .5rem;
-  top: 45px;
-  left: 30px;
+  top: 50px;
+  left: 35px;
   transition: .3s ease;
 }
+
 
 .navbar .nav__dropdown-menu li{
   padding: 1rem 1.25rem;
@@ -182,7 +180,7 @@ body{
 
 .navbar .nav__dropdown-menu .dropdown__link{
   font-family: 'Raleway';
-  color: var(--color-grayBlack);
+  color: var(--color-white);
   font-size: 1.1em;
 }
 
@@ -321,7 +319,7 @@ body{
   font-size: 1.2em;
   font-weight: bold;
   border-radius: 30px;
-  background: linear-gradient(90deg,var(--color-blue),var(--color-purple));
+  background: var(--color-blue);
   margin-top: 20px;
   color: var(--color-white);
   border: none;
@@ -377,8 +375,11 @@ body{
   padding: 5px 5px;
   color: white;
   font-size: 1.2rem;
-  background: var(--color-grayBlack)
+  background: var(--color-grayBlack);
+  transition: .1s steps(165);
 }
+
+
 
 .box__content{
   padding: 1.5rem 1.5rem;
@@ -417,7 +418,8 @@ body{
 }
 
 .btn__quiz{
-  padding: .9em 100px;
+  height: 60px;
+  width: 250px;
   border-radius: .7em;
   margin-top: 12px;
   outline: none;
@@ -425,12 +427,18 @@ body{
   font-family: 'Raleway';
   font-size: 1.1em;
   font-weight: bold;
-  background: linear-gradient(90deg, var(--color-blue), var(--color-purple));
+  background: var(--color-green);
   color: white;
+  border: 1px solid rgba(255,255,255,.3);
+  transition: .05s steps(165);
 
 }
 
+.btn__quiz:hover{
+  cursor: pointer;
+  transform: translateY(-3px);
 
+}
 
 @media (max-width: 1750px) {
   .header{
