--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,7 @@ body{
 .navbar{
 
   height: 100%;
+  z-index: 1;
   
 }
 
@@ -114,6 +115,7 @@ body{
   top: 50px;
   left: 35px;
   transition: .3s ease;
+  z-index: 999;
 }
 
 
@@ -376,8 +378,9 @@ body{
   padding: 5px 5px;
   color: white;
   font-size: 1.2rem;
-  background: var(--color-grayBlack);
+  background: radial-gradient(circle,var(--color-red),orange);
   transition: .1s steps(165);
+  z-index: initial;
 }
 
 
@@ -390,8 +393,6 @@ body{
   height: 100%;
   width: 100%;
   display: flex;
-  backdrop-filter: blur(10px);
-  overflow: hidden;
 }
 
 .info{
@@ -403,6 +404,11 @@ body{
 .box__content p{
   font-family: 'Raleway';
   font-size: 1.1em;
+}
+
+.box__content .questions__quantity span{
+  font-family: 'Raleway';
+  font-weight: bold;
 }
 
 .box__content .quiz__difficulty{
@@ -428,10 +434,10 @@ body{
   font-family: 'Raleway';
   font-size: 1.1em;
   font-weight: bold;
-  background: var(--color-green);
+  background: var(--color-grayBlack);
   color: white;
   border: 1px solid rgba(255,255,255,.3);
-  transition: .05s steps(165);
+  transition: .1s ease;
 
 }
 
@@ -459,21 +465,44 @@ body{
   }
 
   .homepage .homepage__hero{
-    height: 550px;
+    height: 35%;
   }
 
 
   .homepage__hero .homepage__title{
-    font-size: 6rem;
+    font-size: 3.75rem;
   }
 
   .homepage__hero .homepage__subtitle{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 
   .homepage__hero .homepage__button{
-    padding: 15px 1.5rem
+    padding: 15px 1.5rem;
 
   }
+
+  .quiz__spotlight .quiz__spotlight__header{
+    font-size: 2.75rem;
+  }
   
+  .quiz__spotlight {
+    margin-top: 50px;
+    height: 100vh;
+  }
+
+  .quiz__box {
+    height: 300px;
+    width: 400px;
+  }
+
+  .box__content h3{
+    font-size: 1.1em;
+  }
+
+  .box__content p{
+    font-size: 1em;
+  }
 }
+
+
