--- a/src/style.css
+++ b/src/style.css
@@ -74,34 +74,37 @@ body{
   position: relative;
 }
 
-.navbar .nav__links, #nav__link{
+.navbar .nav__links{
   display: flex;
   align-items: center;
   gap: 70px;
-  font-family: 'Raleway';
   height: 100%;
   font-size: 1em;
   color: var(--color-grayBlack);
   font-weight: bold;
 }
 
+.navbar .nav__links li{
+  display: flex;
+  align-items: center;
+}
+
 #nav__link{
   position: relative;
+  font-family: 'Raleway';
+  display: flex;
+  align-items: center;
+  color: var(--color-grayBlack);
 }
 
-#nav__link::after{
-  content: '';
+/*#nav__link::after{
+  content: "";
   position: absolute;
-  background-color: transparent;
-  border-radius: 5px;
   inset: -10px;
-  z-index: -1;
-  transition: .3s ease;
 }
+  */
 
-#nav__link:hover::after{
-  background: rgba(0,0,0,.2)
-}
+
 
 
 
@@ -110,10 +113,10 @@ body{
   flex-direction: column;
   opacity: 0;
   position: absolute;
-  background-color: var(--color-green);
+  background-color: var(--color-grayBlack);
   border-radius: .5rem;
-  top: 50px;
-  left: 35px;
+  top: 40px;
+  left: 30px;
   transition: .3s ease;
   z-index: 999;
 }
@@ -184,6 +187,7 @@ body{
   font-family: 'Raleway';
   color: var(--color-white);
   font-size: 1.1em;
+  font-weight: 500;
 }
 
 .nav__dropdown #nav__dropdown__link{
@@ -192,36 +196,53 @@ body{
   font-family: 'Raleway';
   display: flex;
   align-items: center;
-  font-weight: bold;
   position: relative;
-  gap: 5px;
+  gap: 15px;
 
 }
 
-#nav__dropdown__link::after{
+
+.home{
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.home__icon{
+  height: auto;
+  width: 20px;
+  position: relative;
+  top: -3px;
+}
+
+.arrow-wrapper {
+  position: relative;
+}
+
+.arrow-wrapper::after {
   content: '';
   position: absolute;
-  background-color: transparent;
-  border-radius: 5px;
-  inset: -10px;
+  inset: -4px;
+  background: var(--color-green);
+  border-radius: 60%;
+  width: calc(100% + 8px);
+  height: calc(100% + 8px);
   z-index: -1;
-  transition: .3s ease;
-}
-
-#nav__dropdown__link:hover::after{
-  background-color: rgba(0,0,0,.2)
 }
 
 
-
-.nav__dropdown #nav__dropdown__link img{
+.nav__dropdown #nav__dropdown__link #arrow__img{
   height: auto;
   display: flex;
   align-self: baseline;
   width: 15px;
   rotate: 90deg;
   transition: .3s ease;
+  filter: invert(100%);
+  position: relative;
 }
+
+
 
 
 
@@ -388,8 +409,8 @@ body{
 .box__content{
   padding: 1.5rem 1.5rem;
   border-radius: 2rem;
-  background-color: rgba(255,255,255,.1);
-  border: 1px solid rgba(255,255,255,.3);
+  border: 1px solid hsl(0,0%,100%,0.3);
+  background: hsl(0, 0%, 100%,0.2);
   height: 100%;
   width: 100%;
   display: flex;
@@ -436,7 +457,7 @@ body{
   font-weight: bold;
   background: var(--color-grayBlack);
   color: white;
-  border: 1px solid rgba(255,255,255,.3);
+  border: 1px solid hsl(0,0%,100%,0.3);
   transition: .1s ease;
 
 }
