--- a/src/style.css
+++ b/src/style.css
@@ -97,12 +97,27 @@ body{
   color: var(--color-grayBlack);
 }
 
-/*#nav__link::after{
-  content: "";
+#nav__link::after{
+  content: '';
   position: absolute;
   inset: -10px;
+  width: calc(100% -20px);
+  height: calc(100% -20px);
+  background-color: white;
+  box-shadow: 0 5px 0 rgba(0,0,0,.65),
+              -2px 0 0 rgba(0,0,0,.65),
+              0 -2px 0 rgba(0,0,0,.65),
+              2px 0 0 rgba(0,0,0,.65);
+  transition: opacity .25s ease;
+  border-radius: 1.5em;
+  z-index: -999;
+  opacity: 0;
 }
-  */
+
+#nav__link:hover::after{
+  opacity: 1;
+}
+  
 
 
 
@@ -201,11 +216,32 @@ body{
 
 }
 
+.nav__dropdown #nav__dropdown__link::after{
+  content: '';
+  position: absolute;
+  inset: -10px;
+  width: calc(100% -20px);
+  height: calc(100% -20px);
+  background-color: white;
+  box-shadow: 0 5px 0 rgba(0,0,0,.65),
+              -2px 0 0 rgba(0,0,0,.65),
+              0 -2px 0 rgba(0,0,0,.65),
+              2px 0 0 rgba(0,0,0,.65);
+  transition: opacity .25s ease;
+  border-radius: 1.5em;
+  z-index: -999;
+  opacity: 0;
+}
+
+.nav__dropdown #nav__dropdown__link:hover::after{
+  opacity: 1;
+}
+
 
 .home{
   display: flex;
   justify-content: center;
-  gap: 15px;
+  gap: 10px;
 }
 
 .home__icon{
@@ -223,7 +259,7 @@ body{
   content: '';
   position: absolute;
   inset: -4px;
-  background: var(--color-green);
+  background: var(--color-grayBlack);
   border-radius: 60%;
   width: calc(100% + 8px);
   height: calc(100% + 8px);
@@ -346,6 +382,7 @@ body{
   background: var(--color-blue);
   margin-top: 20px;
   color: var(--color-white);
+  box-shadow: 0 5px 0 rgba(0,123,255,.65);
   border: none;
   display: flex;
   align-items: center;
@@ -459,6 +496,7 @@ body{
   color: white;
   border: 1px solid hsl(0,0%,100%,0.3);
   transition: .1s ease;
+  box-shadow: 0 5px 0 rgba(0,0,0,.65);
 
 }
 
