--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,7 @@ body{
   font-weight: bold;
 }
 
+
 .navbar .nav__links li{
   display: flex;
   align-items: center;
@@ -97,26 +98,6 @@ body{
   color: var(--color-grayBlack);
 }
 
-#nav__link::after{
-  content: '';
-  position: absolute;
-  inset: -10px;
-  width: calc(100% -20px);
-  height: calc(100% -20px);
-  background-color: white;
-  box-shadow: 0 5px 0 rgba(0,0,0,.65),
-              -2px 0 0 rgba(0,0,0,.65),
-              0 -2px 0 rgba(0,0,0,.65),
-              2px 0 0 rgba(0,0,0,.65);
-  transition: opacity .25s ease;
-  border-radius: 1.5em;
-  z-index: -999;
-  opacity: 0;
-}
-
-#nav__link:hover::after{
-  opacity: 1;
-}
   
 
 
@@ -212,30 +193,12 @@ body{
   display: flex;
   align-items: center;
   position: relative;
-  gap: 15px;
+  gap: 10px;
 
 }
 
-.nav__dropdown #nav__dropdown__link::after{
-  content: '';
-  position: absolute;
-  inset: -10px;
-  width: calc(100% -20px);
-  height: calc(100% -20px);
-  background-color: white;
-  box-shadow: 0 5px 0 rgba(0,0,0,.65),
-              -2px 0 0 rgba(0,0,0,.65),
-              0 -2px 0 rgba(0,0,0,.65),
-              2px 0 0 rgba(0,0,0,.65);
-  transition: opacity .25s ease;
-  border-radius: 1.5em;
-  z-index: -999;
-  opacity: 0;
-}
 
-.nav__dropdown #nav__dropdown__link:hover::after{
-  opacity: 1;
-}
+
 
 
 .home{
@@ -251,20 +214,7 @@ body{
   top: -3px;
 }
 
-.arrow-wrapper {
-  position: relative;
-}
 
-.arrow-wrapper::after {
-  content: '';
-  position: absolute;
-  inset: -4px;
-  background: var(--color-grayBlack);
-  border-radius: 60%;
-  width: calc(100% + 8px);
-  height: calc(100% + 8px);
-  z-index: -1;
-}
 
 
 .nav__dropdown #nav__dropdown__link #arrow__img{
@@ -274,7 +224,6 @@ body{
   width: 15px;
   rotate: 90deg;
   transition: .3s ease;
-  filter: invert(100%);
   position: relative;
 }
 
@@ -388,17 +337,16 @@ body{
   align-items: center;
   justify-content: center;
   transition: .5s ease;
-  padding: 15px 25px;
+  padding: 17px 30px;
   cursor: pointer;
-}
-
-
-
-.homepage .homepage__button a{
-  font-size: 1.1em;
+  font-size: 1.3em;
   font-family: 'Raleway';
   color: var(--color-white);
 }
+
+
+
+
 
 
 
@@ -436,20 +384,30 @@ body{
   padding: 5px 5px;
   color: white;
   font-size: 1.2rem;
-  background: radial-gradient(circle,var(--color-red),orange);
-  transition: .1s steps(165);
+  background-color: white;
+  transition: .3s ease;
+  position: relative;
   z-index: initial;
+}
+
+.quiz__box::after{
+  content: '';
+  position: absolute;
+  inset: -8px;
+  width: calc(100% + 16px);
+  height: calc(100% + 36px);
+  border-radius: 2em;
+  background-color: var(--color-grayBlack);
+  z-index: -1;
+
 }
 
 
 
+
+
 .box__content{
-  padding: 1.5rem 1.5rem;
-  border-radius: 2rem;
-  border: 1px solid hsl(0,0%,100%,0.3);
-  background: hsl(0, 0%, 100%,0.2);
-  height: 100%;
-  width: 100%;
+  padding: 1em 1.3em;
   display: flex;
 }
 
@@ -462,11 +420,14 @@ body{
 .box__content p{
   font-family: 'Raleway';
   font-size: 1.1em;
+  font-weight:500;
+  color: var(--color-grayBlack);
 }
 
 .box__content .questions__quantity span{
   font-family: 'Raleway';
   font-weight: bold;
+  color: var(--color-grayBlack);
 }
 
 .box__content .quiz__difficulty{
@@ -476,6 +437,7 @@ body{
 
 .box__content h3{
   font-size: 1.4em;
+  color: var(--color-grayBlack);
 }
 
 .box__content .title{
@@ -515,13 +477,10 @@ body{
     font-size: 3rem;
   }
 
-  .navbar .nav__links, #nav__link{
-    gap: 20px;
+  .navbar .nav__links{
+    gap: 65px;
   }
 
-  .nav__links li{
-    padding: 0 20px;
-  }
 
   .homepage .homepage__hero{
     height: 35%;
@@ -558,6 +517,8 @@ body{
   .box__content h3{
     font-size: 1.1em;
   }
+
+
 
   .box__content p{
     font-size: 1em;
