--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 
 *{
@@ -380,7 +381,7 @@ body{
 .quiz__box {
   width: 500px;
   height: 300px;
-  border-radius: 2rem;
+  border-radius: 3rem;
   padding: 5px 5px;
   color: white;
   font-size: 1.2rem;
@@ -397,6 +398,8 @@ body{
 .box__content{
   padding: 1em 1.3em;
   display: flex;
+  background-color: rgba(255,255,255,.1);
+  border-radius: 3rem;
 }
 
 .info{
@@ -438,16 +441,21 @@ body{
   border-radius: .7em;
   margin-top: 12px;
   outline: none;
-  border: none;
+  border: 2px solid rgba(255,255,255,.3);
   font-family: 'Raleway';
   font-size: 1.1em;
   font-weight: bold;
   background: var(--color-green);
+  box-shadow: 0 5px 0 rgba(112,224,65,.65);
   color: white;
   transition: .1s ease;
-  box-shadow: 0 5px 0 rgba(112,224,0,.9);
+  position: relative;
 
 }
+
+
+
+
 
 .btn__quiz:hover{
   cursor: pointer;
