--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ body{
 
 
 .header{
-  padding: 0rem 10rem;
+  padding: 0rem 12rem;
   height: 80px;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -65,11 +65,13 @@ body{
 
 
 .header__logo .header__title {
-  font-size: 3em;
+  font-size: 2.5em;
   background: linear-gradient(90deg, var(--color-blue), var(--color-green));
   font-family: 'Dancing Script', cursive;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  cursor: pointer;
+
 }
 
 
@@ -92,7 +94,7 @@ body{
 
 .info a{
   font-family: 'Mona Sans', sans-serif;
-  font-size: 1em;
+  font-size: 16px;
   font-weight: 600;
   color: var(--color-blueDark);
   transition: .25s ease;
@@ -136,13 +138,19 @@ body{
 
 .register__section .btn__login{
   font-family: 'Mona Sans',sans-serif;
-  font-size: 1em;
+  font-size: 16px;
   background-color: var(--color-blue);
   color: white;
   font-weight: 600;
   padding: 10px 40px;
   border-radius: 2.1em;
-  box-shadow: 0 3px #0056b3, 0 4px #004080, 0 5px #00294d;
+  box-shadow:
+    inset 0 1px 0 0 rgba(255,255,255,0.4),
+    0 2px 0 0 #60A5FA,   
+    0 4px 0 0 #3B82F6,  
+    0 6px 0 0 #2563EB,   
+    0 8px 0 0 #1D4ED8,   
+    0 8px 16px 0 rgba(59, 130, 246, 0.5); 
 }
 
 .register__section .btn__login:hover{
@@ -152,11 +160,17 @@ body{
 
 .register__section .btn__signup{
   font-family: 'Mona Sans', sans-serif;
-  font-size: 1em;
+  font-size: 16px;
   background-color: var(--color-green);
   color: white;
   font-weight: 600;
-  box-shadow: 0 3px #55b300, 0 4px #3d8000, 0 5px #2a5500;
+  box-shadow:
+    inset 0 1px 0 0 rgba(255,255,255,0.4),
+    0 2px 0 0 #4ADE80,   
+    0 4px 0 0 #22C55E,   
+    0 6px 0 0 #16A34A,  
+    0 8px 0 0 #15803D,   
+    0 8px 16px 0 rgba(34, 197, 94, 0.5); 
   padding: 10px 50px;
   border-radius: 2.1em;
 }
@@ -225,7 +239,7 @@ body{
 .homepage .homepage__button{
   font-size: 1.4em;
   font-weight: 600;
-  border-radius: .5em;
+  border-radius: 1.8em;
   background: var(--color-rose);
   margin-top: 20px;
   color: var(--color-white);
@@ -237,12 +251,25 @@ body{
   padding: 0.7em 2rem;
   font-family: 'Mona Sans', sans-serif;
   color: var(--color-white);
-  box-shadow: 0 3px #c553a5, 0 4px #a33b87, 0 5px #812f6f;
-  transition: .1s ease;
+  box-shadow:
+    inset 0 1px 0 0 rgba(255,255,255,0.4),
+    0 2px 0 0 var(--color-rose),
+    0 4px 0 0 #FF1E50,
+    0 6px 0 0 #FF7A95,
+    0 8px 0 0 #FF6B88,
+    0 8px 16px 0 rgba(255, 77, 109, 0.5);
+  transition: .3s ease;
 }
 
 .homepage .homepage__button:hover{
-  filter: brightness(.9);
+  transform: translateY(4px);
+   box-shadow:
+    inset 0 1px 0 0 rgba(255,255,255,0.4),
+    0 1px 0 0 #f472b6,
+    0 2px 0 0 #f43f5e,
+    0 3px 0 0 #e11d48,
+    0 4px 0 0 #be123c,
+    0 4px 8px 0 rgba(244,114,182,0.5);
 }
 
 
@@ -292,14 +319,35 @@ body{
 
 }
 
-.features__grid{
-  margin-top: 3rem;
+.features__grid {
   width: 1300px;
-  justify-self: center;
-  height: 650px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columnas iguales */
+  grid-auto-rows: 250px; /* altura de cada fila */
   background: radial-gradient(circle, var(--color-blue), var(--color-green));
   border-radius: 1.8em;
+  margin: 0 auto;
+  margin-top: 3rem;
+  gap: 1.8rem; /* 🔥 único espacio entre cajas */
+  padding: 2rem;
 }
+
+.feature {
+  background-color: var(--color-blueDark);
+  border-radius: 1.8em;
+  display: flex;               /* para ver texto centrado */
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+}
+
+.feature 1{
+
+}
+
+
+
 
 
 
@@ -333,6 +381,7 @@ body{
     padding: 17px 1.7rem;
 
   }
+
 }
 
 
