--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,8 @@ body{
   justify-self: center;
   align-items: center;
   position: fixed;
-  background-color: var(--color-white);
+  background-color: rgba(255,255,255,.7);
+  backdrop-filter: blur(5px);
   gap: 35px;
   width: 100%;
   z-index: 999 !important;
@@ -566,8 +567,6 @@ body{
   color: var(--color-blueDark);
   font-family: 'Poppins';
 }
-
-
 
 
 @media (max-width: 1750px) {
