--- a/src/style.css
+++ b/src/style.css
@@ -58,8 +58,7 @@ body{
   justify-self: center;
   align-items: center;
   position: fixed;
-  background-color: rgba(255,255,255,.7);
-  backdrop-filter: blur(5px);
+  background-color: var(--color-white);
   gap: 35px;
   width: 100%;
   z-index: 999 !important;
